--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Glass of Milk",
+  "name": "A web app to help you make healthier food from what's in your fridge",
   "icons": [
     {
       "src": "favicon.ico",
