--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,9 +1,9 @@
 {
   "short_name": "Glass of Milk",
-  "name": "A web app to help you make healthier food from what's in your fridge",
+  "name": "A web app to help you make healthier food from what's in your frid",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "logo.png",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
